# test_skill

./: .env  .env copy  .gitignore  README.md  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl
agents/: __init__.py  prompt.py  thread_state.py
agents/aio_sandbox/: __init__.py  aio_sandbox.py  aio_sandbox_provider.py  local_backend.py
agents/config/: agents_config.py  paths.py
agents/memory/: __init__.py  message_processing.py  queue.py  storage.py  updater.py
agents/middleware/: __init__.py  llm_error_handling_middleware.py  memory_middleware.py  sandbox_audit_middleware.py  skills_middleware.py  thread_data_middleware.py  uploads_middleware.py
agents/sandbox/: file_operation_lock.py  middleware.py  sandbox.py  sandbox_provider.py  tools.py
skills/document_extractor/: SKILL.md
skills/document_extractor/references/: api_reference.md
skills/document_extractor/scripts/: example.py  extract_text.py
skills/example-user/save-as-txt/: SKILL.md
skills/example-user/save-as-txt/scripts/: save_content.py
tests/: run_tests.py  streaming_demo.py  test_markitdown.py  test_reasoning.py
